docs/v0.0.3/_sources/gallery/amplitude_retrieval.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/amplitude_retrieval.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_amplitude_retrieval.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_amplitude_retrieval.py:


Non-Maximum Suppression for Gaussian Pulse Detection
====================================================

This example demonstrates the use of the NonMaximumSuppression class to detect
Gaussian pulses in a one-dimensional signal. It generates a synthetic dataset
of Gaussian pulses, applies the non-maximum suppression algorithm, and plots
the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-41

.. code-block:: Python


    from DeepPeak.algorithms import NonMaximumSuppression
    from DeepPeak.algorithms import ClosedFormSolver
    from DeepPeak.signals import SignalDatasetGenerator
    from DeepPeak import kernel

    NUM_PEAKS = 4
    SEQUENCE_LENGTH = 400
    NSAMPLES = 4
    gaussian_width = 0.03

    kernel = kernel.Lorentzian(
        amplitude=(50, 100),  # Amplitude range
        position=(0.1, 0.9),  # Peak position range
        width=gaussian_width,  # Width range
    )

    generator = SignalDatasetGenerator(sequence_length=SEQUENCE_LENGTH)

    dataset = generator.generate(
        n_samples=NSAMPLES,
        kernel=kernel,
        n_peaks=NUM_PEAKS,
        noise_std=0.3,  # Add some noise
        categorical_peak_count=False,
    )

    dataset.compute_region_of_interest(width_in_pixels=5)

    dataset.plot()




.. image-sg:: /gallery/images/sphx_glr_amplitude_retrieval_001.png
   :alt: Sample 0, Sample 1, Sample 2
   :srcset: /gallery/images/sphx_glr_amplitude_retrieval_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x900 with 3 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 42-43

Configure and run the detector

.. GENERATED FROM PYTHON SOURCE LINES 43-57

.. code-block:: Python

    peak_locator = NonMaximumSuppression(
        gaussian_sigma=0.003,
        threshold="auto",
        maximum_number_of_pulses=NUM_PEAKS,
        kernel_truncation_radius_in_sigmas=3,
    )

    batched_peak_detector = peak_locator.run_batch(
        time_samples=dataset.x_values, signal=dataset.signals
    )

    batched_peak_detector.plot()





.. image-sg:: /gallery/images/sphx_glr_amplitude_retrieval_002.png
   :alt: Sample #0 (K=4, detected=1), Sample #1 (K=4, detected=1), Sample #2 (K=4, detected=1), Sample #3 (K=4, detected=1)
   :srcset: /gallery/images/sphx_glr_amplitude_retrieval_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 650x1120 with 4 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 58-59

Solve for amplitudes

.. GENERATED FROM PYTHON SOURCE LINES 59-67

.. code-block:: Python

    solver = ClosedFormSolver(sigma=dataset.widths.mean().squeeze())

    result = solver.run_batch(
        centers=batched_peak_detector.peak_times,
        center_samples=batched_peak_detector.peak_amplitude_raw,
    )

    result.compare_plot(true_amplitudes=dataset.amplitudes)



.. image-sg:: /gallery/images/sphx_glr_amplitude_retrieval_003.png
   :alt: amplitude retrieval
   :srcset: /gallery/images/sphx_glr_amplitude_retrieval_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x500 with 4 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.697 seconds)


.. _sphx_glr_download_gallery_amplitude_retrieval.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: amplitude_retrieval.ipynb <amplitude_retrieval.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: amplitude_retrieval.py <amplitude_retrieval.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: amplitude_retrieval.zip <amplitude_retrieval.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
